fix font overlap at extra large sizes

--- a/karutasrs-front/app/styles/components/grabber-card.less
+++ b/karutasrs-front/app/styles/components/grabber-card.less
@@ -46,11 +46,11 @@
 }
 
 .grabber-card-outer.review > .grabber-card-inner > .character > p {
-	font-size: 4.57vw;
+	font-size: 4.37vw;
 }
 
 .grabber-card-outer.review-info > .grabber-card-inner > .character > p {
-	font-size: 4.20vw;
+	font-size: 3.90vw;
 }
 
 .grabber-card-outer.demo > .grabber-card-inner > .character > p {
@@ -71,6 +71,13 @@
 }
 
 @media screen and (max-width: @widescreenMonitorBreakpoint - 1) {
+	.grabber-card-outer.review > .grabber-card-inner > .character > p {
+		font-size: 4.57vw;
+	}
+
+	.grabber-card-outer.review-info > .grabber-card-inner > .character > p {
+		font-size: 4.20vw;
+	}
 }
 
 @media screen and (max-width: @largeMonitorBreakpoint - 1) {
